--- a/index.html
+++ b/index.html
@@ -1,54 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Bree+Serif&display=swap" rel="stylesheet">
 </head>
 <body>
-
-            <header>
-                <nav class="navbar">
-                    <ul class="navigation">
-                        <li class="list"><a href="#home">Home</a></li>
-                        <li class="list"><a href="#home">Service</a></li>
-                        <li class="list"><a href="#home">About Us</a></li>
-                        <li class="list"><a href="#home">Contact Us</a></li>
-                    </ul>
-                </nav>
-            </header>
-            <section>
-                <h1>Welcome to My Calculator</h1>
-                <br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit inventore at praesentium aliquam quisquam sequi laborum facere, omnis maxime? Quidem corrupti omnis assumenda unde eveniet asperiores id explicabo nobis sit.
-                </p>
-                <br>
-                <input id="inpt1" type="number" placeholder="Enter number  1" class="noSpinner">
-                <br><br>
-                <input id="inpt2" type="number" placeholder="Enter number  2" class="noSpinner">
-                <br>
-                <br>
-                <label for="operator">Select Operator:</label>
-                <br>
-                <label for="operatorida" class="change">
-                    <input type="radio" name="operator" id="operatorida">Addition
-                </label>
-                <label for="operatoridb" class="change">
-                    <input type="radio" name="operator" id="operatoridb">Subtraction
-                </label>
-                <label for="operatoridc" class="change">
-                    <input type="radio" name="operator" id="operatoridc">Product
-                </label>
-                <label for="operatoridd" class="change">
-                    <input type="radio" name="operator" id="operatoridd">Divide
-                </label>
-                <p style="color: rgb(0, 130, 17);" id="res"></p>
-                <button id="sub-btn" type="button">Submit</button>
-            </section>
-    <script src="/app.js"></script>
+    <div class="container">
+        <h1>Welcome to My Calculator</h1>
+        <div class="calculator">
+            <form>
+                <div class="display_result">
+                    <input type="text" name="display">
+                </div>
+                <div>
+                    <input type="button" value="AC" onclick="display.value = '' ">
+                    <input type="button" value="DE" onclick="display.value = display.value.toString().slice(0,-1) ">
+                    <input type="button" value="." onclick="display.value += '.' ">
+                    <input type="button" value="/" onclick="display.value += '/' ">
+                </div>
+                <div>
+                    <input type="button" value="7" onclick="display.value += '7' ">
+                    <input type="button" value="8" onclick="display.value += '8' ">
+                    <input type="button" value="9" onclick="display.value += '9' ">
+                    <input type="button" value="*" onclick="display.value += '*' ">
+                </div>
+                <div>
+                    <input type="button" value="4" onclick="display.value += '4' ">
+                    <input type="button" value="5" onclick="display.value += '5' ">
+                    <input type="button" value="6" onclick="display.value += '6' ">
+                    <input type="button" value="-" onclick="display.value += '-' ">
+                </div>
+                <div>
+                    <input type="button" value="1" onclick="display.value += '1' ">
+                    <input type="button" value="2" onclick="display.value += '2' ">
+                    <input type="button" value="3" onclick="display.value += '3' ">
+                    <input type="button" value="+" onclick="display.value += '+' ">
+                </div>
+                <div>
+                    <input type="button" value="00" onclick="display.value += '00' ">
+                    <input type="button" value="0" onclick="display.value += '0' ">
+                    <input type="button" value="=" onclick="display.value = eval(display.value) " class="equal" >
+                </div>
+            </form>
+        </div>
+    </div>
 </body>
-
 </html>
